# vcpkg_manifest

./: CMakeLists.txt  gen_manifest_from_file.py  main.cpp  vcpkg.json
